Added a flag to expose the include_vars bug

--- a/roles/example-role/tasks/main.yml
+++ b/roles/example-role/tasks/main.yml
@@ -6,6 +6,10 @@
 - name: Include OS Specific values
   include_vars: "{{ ansible_os_family }}.yml"
 
+- name: Second include
+  include_vars: "second_include.yml"
+  when: expose_bug
+
 - debug: var=service_name
 
 
