--- a/merge-test.yml
+++ b/merge-test.yml
@@ -14,5 +14,8 @@
     service_name_conf_arbitrary_playbook_additions:
      some_arbitrary_value: Logging level override
 
+    #Turn on and off include_vars bug
+    expose_bug: False
+
   roles:
     - example-role
